Fix blog post formatting

--- a/_posts/2013-10-31-stm32f4-adc.md
+++ b/_posts/2013-10-31-stm32f4-adc.md
@@ -99,7 +99,7 @@ The above code reads in analog voltages from 5 pins, namely PC0, PC1, PC2, PC3 a
 
 To modify the GPIO pins used, just change lines 34-39 with your required pins. You will also need to configure the channels at lines 60-64. The following table was derived from the STM32F4 Discovery user manual (UM1472) and can be used to determine which pins are connected to which ADC and via which channel.
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th></th>
